# pyboondmanager

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  README.md  setup.cfg
.github/workflows/: python-package.yml
boondmanager/: __init__.py  __version__.py  auth.py  exceptions.py  utils.py
boondmanager/api/: __init__.py  absences.py  absences_reports.py  accounts.py  actions.py  administrator.py  advantages.py  agencies.py  application.py  attached_flags.py  base.py  billing.py  business_units.py  calendars.py  candidates.py  charts.py  companies.py  contacts.py  contracts.py  dashboard.py  deliveries.py  devices.py  documents.py  esignature.py  expenses.py  flags.py  forms.py  groupments.py  imports.py  inactivities.py  invoices.py  logs.py  marketplace.py  opportunities.py  orders.py  payments.py  poles.py  positionings.py  products.py  projects.py  (+20 more)
docs/: conf.py  index.md
docs/pages/: api.md  basics.md  contribute.md  how_to_app.md  todo.md
examples/hello_app/: hello_app.py
requirements/: dev.txt  doc.txt  test.txt
tests/: __init__.py  test_auth.py  test_clients.py  test_utils.py
tests/mocks/: absences.list.json  absences_reports.422.json  absences_reports.default.json  absences_reports.get.24.json  absences_reports.get.24.rights.json  absences_reports.list.json  marketplace.default.json  marketplace.get.37934.configure.json  marketplace.get.37934.json  marketplace.list.json
