[metadata]
name = pyboondmanager
version = attr: boondmanager.__version__
author = Thomas Durey
author_email = tominardi@gmail.com
description = Python connector for BoondManager
long_description = file: README.md
long_description_content_type = text/markdown
license_file = LICENSE
license = Apache License, Version 2.0
url = https://github.com/tominardi/pyboondmanager
keywords = api, erp, esn, boondmanager, integration, project management, resource management, automation, productivity, professional services, business solution

classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
install_requires =
    requests>=2.27.1

[bdist_wheel]
universal=1

[sdist]
formats=gztar,zip

[pycodestyle]
max-line-length = 120
statistics = True

[pylint]
max-line-length=120
ignore=migrations
output-format=colorized
disable=C0111,W0212,W0105,E1101,W0614,W0221,W0401,W0201,W0511
max-args=6
max-locals=16
max-returns=6
max-branches=12
max-statements=50
max-parents=7
max-attributes=12
min-public-methods=0
max-public-methods=20
notes=FIXME,XXX,TODO
min-similarity-lines=6

[coverage:run]
omit=
    */.local/*
    */commands/*
    *__init__.py
    */tests/*
